Continuando revisão bibliográfica: Mortgaging e Iniciado Nova Narrativa

--- a/Readings/Mortgaging.org
+++ b/Readings/Mortgaging.org
@@ -16,11 +16,6 @@
 #+PROPERTY: COUNTRY
 
 
-
-- Jordà et al 2019
-- Bartscher et al - 2020
-
-
 * [#A] Survey 
   :PROPERTIES:
   :UNNUMBERED: t
@@ -429,6 +424,87 @@
 }
 #+END_SRC
 
+** SKIM [#C] [[https://academic.oup.com/jeea/article-abstract/2/6/1148/2280932?redirectedFrom=fulltext][Ehrmann and Worms - Bank Networks and Monetary Policy Transmission]]
+   :PROPERTIES:
+   :YEAR:     2004
+   :ZOTERO:   Yes
+   :TYPE:     Theory
+   :STATUS:   Filed
+   :RELEVANCE: Regular
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Ehrmann_2004,
+  author       = {Ehrmann, Michael and Worms, Andreas},
+  title	       = {Bank Networks and Monetary Policy Transmission},
+  year	       = {2004},
+  volume       = {2},
+  number       = {6},
+  month	       = {Dec},
+  pages	       = {1148–1171},
+  doi	       = {10.1162/1542476042813904},
+  url	       = {http://dx.doi.org/10.1162/1542476042813904},
+  journal      = {Journal of the European Economic Association},
+  publisher    = {Oxford University Press (OUP)}
+}
+#+END_SRC
+
+** SKIM [#A] [[https://academic.oup.com/jeea/article-abstract/12/2/522/2317930?redirectedFrom=fulltext][Sá et al - Capital Inflows, Financial Structure and Housing Booms]]
+   :PROPERTIES:
+   :YEAR:     2014
+   :ZOTERO:   Yes
+   :TYPE:     Empirical
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Sa_Inflows_2013,
+  author       = {Sá, Filipa and Towbin, Pascal and Wieladek, Tomasz},
+  title	       = {CAPITAL INFLOWS, FINANCIAL STRUCTURE AND HOUSING BOOMS},
+  year	       = {2013},
+  volume       = {12},
+  number       = {2},
+  month	       = {Dec},
+  pages	       = {522–546},
+  doi	       = {10.1111/jeea.12047},
+  url	       = {http://dx.doi.org/10.1111/jeea.12047},
+  journal      = {Journal of the European Economic Association},
+  publisher    = {Oxford University Press (OUP)}
+}
+#+END_SRC
+
+** SKIM [#B] [[https://academic.oup.com/jeea/article-abstract/18/4/2013/5573386?redirectedFrom=fulltext][Hoffman and Stewen - Holes in the Dike: The Global Savings Glut, U.S. House Prices, and the Long Shadow of Banking Deregulation]]
+   :PROPERTIES:
+   :YEAR:    2020
+   :ZOTERO:   Yes
+   :TYPE:     Empirical
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Low
+   :CITE:     Yes
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Hoffmann_2019,
+  author       = {Hoffmann, Mathias and Stewen, Iryna},
+  title	       = {Holes in the Dike: The Global Savings Glut, U.S. House Prices, and the Long Shadow of Banking Deregulation},
+  year	       = {2019},
+  volume       = {18},
+  number       = {4},
+  month	       = {Sep},
+  pages	       = {2013–2055},
+  doi	       = {10.1093/jeea/jvz045},
+  url	       = {http://dx.doi.org/10.1093/jeea/jvz045},
+  journal      = {Journal of the European Economic Association},
+  publisher    = {Oxford University Press (OUP)}
+}
+#+END_SRC
+
 
 * [#A] Mortgage Market
 
@@ -519,7 +595,6 @@
    :END:    
 
 *Zotero file:* muc0070.pdf
-
 * [#A] Housing Bubbles
 ** PARTIAL [#A] [[https://papers.ssrn.com/sol3/papers.cfm?abstract_id=846305#][Borio et al - Asset Prices, Financial and Monetary Stability: Exploring the Nexus]] :BIS:
    :PROPERTIES:
@@ -728,6 +803,16 @@
 }
 #+END_SRC
 
+** SKIM [#C] [[https://pdfs.semanticscholar.org/9157/92055cd5691d9b31ed46556407d50003e310.pdf][Cheng et al - The Real Estate Risk Premium Puzzle: A Solution]]
+   :PROPERTIES:
+   :YEAR:     2008
+   :ZOTERO:   Yes
+   :TYPE:     Theory
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Regular
+   :CITE:     Wait
+   :END:    
 ** READ [#A] [[https://doi.org/10.1016/j.jinteco.2014.12.011][Jordà et al - Betting the house]]
    :PROPERTIES:
    :YEAR:     2015
@@ -811,6 +896,17 @@
 }
 #+END_SRC
 
+** ARCH [#B] [[http://feweb.uvt.nl/pdf/brounen/shilling.pdf][Shilling - Is There a Risk Premium Puzzle in Real Estate?]]
+   CLOSED: [2020-10-02 sex 18:13]
+   :PROPERTIES:
+   :YEAR:     2003
+   :ZOTERO:   Entry
+   :TYPE:     Thechnical
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Low
+   :CITE:     No
+   :END:    
 * [#A] Mortgage interest rate
 * [#A] Financial crisis
 ** SKIM [#B] [[https://doi.org/10.1080/00076791.2013.800967][Blancheton et al - The French paradox: A financial crisis during the golden age of the 1960s]] :France:
@@ -845,6 +941,17 @@
 #+END_SRC
 
 * [#A] Data 
+** SKIM [#C] [[https://www.researchgate.net/publication/242741878_Contrasting_Real_Estate_with_Comparable_Investments_1978_to_2008][Francis and Ibbotson - Contrasting Real Estate with Comparable Investments, 1978 to 2008]]
+   :PROPERTIES:
+   :YEAR:     2009
+   :ZOTERO:   No
+   :TYPE:     Case
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:    
+
 
 ** SKIM [#B] [[https://www.bis.org/statistics/totcredit.htm][Long Series on Credit to Private Non-financial Sectors]]
 ** READ [#B] [[https://ideas.repec.org/a/jre/issued/v32n12010p23-46.html][LaCour-Little et al - Home Equity Extraction by Homeowners: 2000-2006]]
@@ -975,6 +1082,17 @@ FIX BIB
    :END:    
 
 *Zotero file:* ecbocp101.pdf
+
+** SKIM [#A] [[https://www.bde.es/f/webbde/INF/MenuHorizontal/SobreElBanco/Conferencias/2017/papers/171005_15.30-17.00_1_ZIMMERMANN_paper.pdf][Zimmermann - Breaking Banks? Bank Profitability and Monetary Policy]]
+   :PROPERTIES:
+   :YEAR:     2017
+   :ZOTERO:   Yes
+   :TYPE:     Empirical
+   :STATUS:   Filed
+   :RELEVANCE: Regular
+   :IMPACT:   Regular
+   :CITE:     Wait
+   :END:    
 
 * HTML headers                                              :noexport:ignore:
 
