Incluindo papers recebidos no e-mail

--- a/Readings/Mortgaging.org
+++ b/Readings/Mortgaging.org
@@ -507,6 +507,30 @@
 
 
 * [#A] Mortgage Market
+** READ [#A] [[https://academic.oup.com/ser/advance-article/doi/10.1093/ser/mwaa030/5913145][Kohl - Too much mortgage debt? The effectof housing financialization on housingsupply and residential capital formation]]
+   :PROPERTIES:
+   :YEAR:     2020
+   :ZOTERO:   Yes
+   :TYPE:     Case
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Low
+   :CITE:     Yes
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Kohl_2020,
+  author       = {Kohl, Sebastian},
+  title	       = {Too much mortgage debt? The effect of housing financialization on housing supply and residential capital formation},
+  year	       = {2020},
+  month	       = {Sep},
+  doi	       = {10.1093/ser/mwaa030},
+  url	       = {http://dx.doi.org/10.1093/ser/mwaa030},
+  journal      = {Socio-Economic Review},
+  publisher    = {Oxford University Press (OUP)}
+}
+#+END_SRC
+
 
 ** PARTIAL [#B] [[https://escholarship.org/content/qt41d5k3bd/qt41d5k3bd.pdf][Quigley - Federal Credit and Insurance Programs: Housing]] :USA:
    :PROPERTIES:
