--- a/Readings/QCA.org
+++ b/Readings/QCA.org
@@ -425,6 +425,32 @@
 :BIBTEX_ALL: Yes Partial Revise No
 :END:  
 
+** READ [#A] [[https://journals.sagepub.com/doi/pdf/10.1177/2059799120959170][Pagliarin and Gerrits - Trajectory-based Qualitative Comparative Analysis: Accounting for case-based time dynamics]]
+   :PROPERTIES:
+   :YEAR:     2020
+   :ZOTERO:   Yes
+   :TYPE:     Thechnical
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Regular
+   :CITE:     Yes
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Pagliarin_TJQCA_2020,
+  author       = {Pagliarin, Sofia and Gerrits, Lasse},
+  title	       = {Trajectory-based Qualitative Comparative Analysis: Accounting for case-based time dynamics},
+  year	       = {2020},
+  volume       = {13},
+  number       = {3},
+  month	       = {Sep},
+  doi	       = {10.1177/2059799120959170},
+  url	       = {http://dx.doi.org/10.1177/2059799120959170},
+  journal      = {Methodological Innovations},
+  publisher    = {SAGE Publications}
+}
+#+END_SRC
+
 
 ** READ [#A] [[https://doi.org/10.1007/s11135-016-0338-x][Huarng and Yu -  Using qualitative approach to forecasting regime switches]] :StructBreak:Forecast:Financial:TimeSeries:
    :PROPERTIES:
